--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
@@ -21,10 +23,10 @@
                 <a class="nav-link active" aria-current="page" href="#">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Ubicacion</a>
+                <a class="nav-link" href="/pages/ubicacion.html">Ubicacion</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="/pages/productos.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Productos
                 </a>
                 <ul class="dropdown-menu">
@@ -52,13 +54,22 @@
 
     </header>
     <main>
-
+        <div class="card">
+            <h2>Lorem ipsum dolor sit</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab in explicabo quas deleniti pariatur cum, nam odio? Numquam, quaerat sapiente recusandae veniam, facere tempore autem dolorum, sit ducimus dolore fuga.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit vitae, optio ad nemo voluptatibus beatae hic repellat. Commodi ipsa aspernatur optio, minima quidem sequi, veritatis, sed corporis quaerat est labore.</p>
+        </div>
+    
     </main>
-    <div class="contenedor">
-        <h2>Lorem ipsum dolor sit</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab in explicabo quas deleniti pariatur cum, nam odio? Numquam, quaerat sapiente recusandae veniam, facere tempore autem dolorum, sit ducimus dolore fuga.</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit vitae, optio ad nemo voluptatibus beatae hic repellat. Commodi ipsa aspernatur optio, minima quidem sequi, veritatis, sed corporis quaerat est labore.</p>
-    </div>
+    <aside>
+
+    </aside>
+
+    <footer>
+
+    </footer>
+
+
 
 
 
