--- a/pages/productos.html
+++ b/pages/productos.html
@@ -185,69 +185,71 @@
             });
         </script>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th scope="col">Tabla de Precios</th>
-                <th  scope="col">Mango Sapphire</th>
-                <th  scope="col">Purple Haze</th>
-                <th  scope="col">Tangie</th>
-                <th  scope="col">AK-47</th>
-                <th  scope="col">Northern Lights</th>
-                <th  scope="col">Red Hot Cookies</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">20 Gramos</th>
-                <td>$8000</td>
-                <td>$8000</td>
-                <td>$16000</td>
-                <td>$16000</td>
-                <td>$8000</td>
-                <td>$8000</td>
-              </tr>
-              <tr>
-                <th scope="row">15 Gramos</th>
-                <td>$6000</td>
-                <td>$6000</td>
-                <td>$12000</td>
-                <td>$12000</td>
-                <td>$6000</td>
-                <td>$6000</td>
-              </tr>
-              <tr>
-                <th scope="row">10 gramos</th>
-                <td>$4000</td>
-                <td>$4000</td>
-                <td>$8000</td>
-                <td>$8000</td>
-                <td>$4000</td>
-                <td>$4000</td>
-              </tr>
 
+    <div>
+      <table class="table">
+          <thead>
               <tr>
-                <th scope="row">5 gramos</th>
-                <td>$2000</td>
-                <td>$2000</td>
-                <td>$4000</td>
-                <td>$4000</td>
-                <td>$2000</td>
-                <td>$2000</td>
-              </tr>
+                  <th scope="col">Tabla de Precios</th>
+                  <th  scope="col">Mango Sapphire</th>
+                  <th  scope="col">Purple Haze</th>
+                  <th  scope="col">Tangie</th>
+                  <th  scope="col">AK-47</th>
+                  <th  scope="col">Northern Lights</th>
+                  <th  scope="col">Red Hot Cookies</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">20 Gramos</th>
+                  <td>$8000</td>
+                  <td>$8000</td>
+                  <td>$16000</td>
+                  <td>$16000</td>
+                  <td>$8000</td>
+                  <td>$8000</td>
+                </tr>
+                <tr>
+                  <th scope="row">15 Gramos</th>
+                  <td>$6000</td>
+                  <td>$6000</td>
+                  <td>$12000</td>
+                  <td>$12000</td>
+                  <td>$6000</td>
+                  <td>$6000</td>
+                </tr>
+                <tr>
+                  <th scope="row">10 gramos</th>
+                  <td>$4000</td>
+                  <td>$4000</td>
+                  <td>$8000</td>
+                  <td>$8000</td>
+                  <td>$4000</td>
+                  <td>$4000</td>
+                </tr>
 
-              <tr>
-                <th scope="row">Menos de 5 gramos</th>
-                <td>$400xGramo</td>
-                <td>$400xGramo</td>
-                <td>$800xGramo</td>
-                <td>$800xGramo</td>
-                <td>$400xGramo</td>
-                <td>$400xGramo</td>
-              </tr>
-            </tbody>
-          </table>
+                <tr>
+                  <th scope="row">5 gramos</th>
+                  <td>$2000</td>
+                  <td>$2000</td>
+                  <td>$4000</td>
+                  <td>$4000</td>
+                  <td>$2000</td>
+                  <td>$2000</td>
+                </tr>
 
+                <tr>
+                  <th scope="row">Menos de 5 gramos</th>
+                  <td>$400xGramo</td>
+                  <td>$400xGramo</td>
+                  <td>$800xGramo</td>
+                  <td>$800xGramo</td>
+                  <td>$400xGramo</td>
+                  <td>$400xGramo</td>
+                </tr>
+              </tbody>
+            </table>
+    </div>
 
 
 
@@ -262,6 +264,4 @@
     </footer>
 </body>
 </html>
-=======
-<link rel="stylesheet" href="./css/style.css">
->>>>>>> 583eec6abc681f58926bd43bd2c3b601bf6f6639
+
