--- a/index.html
+++ b/index.html
@@ -4,26 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Inicio</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="shortcut icon" href="/assets/img/bluemoonicon.png" type="image/x-icon">
 </head>
 <body>
   <nav class="navbar">
     
-    <a href="" class="navbar_logo">LOGO</a>
+    <a href="/assets/img/bluemoonicon.png" class="navbar_logo"></a>
 
     <div class="navbar_bars">
       <i class="fa-sharp fa-solid fa-bars"></i>
     </div>
 
     <div class="navbar_menu">
-      <a href="/" class="navbar_links">Inicio</a>
-      <a href="/" class="navbar_links">Productos</a>
-      <a href="/" class="navbar_links">Ubicacion</a>
+      <a href="#" class="navbar_links">Inicio</a>
+      <a href="/pages/productos.html" class="navbar_links">Productos</a>
+      <a href="/pages/ubicacion.html" class="navbar_links">Ubicacion</a>
       <a href="/" class="navbar_links">Nosotros</a>
       <a href="/" class="navbar_links">Contactos</a>
     </div>
@@ -37,15 +36,15 @@
     <header>
       <div class="text">
         <div class="text_container">
-          <div class="text_container_left">
+          <div class="text_container-left">
             <h1>Kuro Cannabis</h1>
             <h2>Ajustado de tu bolsillo</h2>
             <p>Investiga nuestros <a href="">precios</a></p>
-            <button class="registro">
+            <button class="text_container-btn">
               <a href="#">Registrate</a>
             </button>
           </div>
-          <div class="text_container_right">
+          <div class="text_container-right">
             <img src="/assets/img/Medicinal_Fried_Chicken.jpg" alt="local" class="imagen">
           </div>
         </div>
