--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
       </div>
     </header>
     <main>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero molestias aut placeat eaque, eum voluptatibus maiores modi. Recusandae nihil debitis laborum voluptate incidunt saepe mollitia, quidem dolorum obcaecati laudantium ab?</p>
+      <p>lorem</p>
+      <p>lorem</p>
+      <p>lorem</p>
+      <p>lorem</p>
+      <p>lorem</p>
     </main>
     <aside>
 
