--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
       </div>
     </header>
-    <main>
+    <main class="">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero molestias aut placeat eaque, eum voluptatibus maiores modi. Recusandae nihil debitis laborum voluptate incidunt saepe mollitia, quidem dolorum obcaecati laudantium ab?</p>
       <p>lorem</p>
       <p>lorem</p>
@@ -63,7 +63,6 @@
     </aside>
 
     <footer id="pie">
-
     </footer>
 
 
