--- a/pages/productos.html
+++ b/pages/productos.html
@@ -25,8 +25,8 @@
       <a href="/index.html" class="navbar_links">Inicio</a>
       <a href="#" class="navbar_links">Productos</a>
       <a href="ubicacion.html" class="navbar_links">Ubicacion</a>
-      <a href="/" class="navbar_links">Nosotros</a>
-      <a href="/" class="navbar_links">Contactos</a>
+      <a href="nosotros.html" class="navbar_links">Nosotros</a>
+      <a href="contactos.html" class="navbar_links">Contactos</a>
     </div>
 
   </nav>
