--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="shortcut icon" href="assets/img/bluemoonicon.png" type="image/x-icon">
 </head>
 <body>
   <nav class="navbar">
@@ -23,8 +24,8 @@
       <a href="#" class="navbar_links">Inicio</a>
       <a href="/pages/productos.html" class="navbar_links">Productos</a>
       <a href="/pages/ubicacion.html" class="navbar_links">Ubicacion</a>
-      <a href="/" class="navbar_links">Nosotros</a>
-      <a href="/" class="navbar_links">Contactos</a>
+      <a href="/pages/nosotros.html" class="navbar_links">Nosotros</a>
+      <a href="/pages/contactos.html" class="navbar_links">Contactos</a>
     </div>
 
   </nav>
