--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ubicacion</title>
+	<title>Contactos</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="shortcut icon" href="/assets/img/bluemoonicon.png" type="image/x-icon">
+	
 </head>
 <body>
   <nav class="navbar">
@@ -23,12 +24,9 @@
     <div class="navbar_menu">
       <a href="/index.html" class="navbar_links">Inicio</a>
       <a href="productos.html" class="navbar_links">Productos</a>
-      <a href="#" class="navbar_links">Ubicacion</a>
+      <a href="ubicacion.html" class="navbar_links">Ubicacion</a>
       <a href="nosotros.html" class="navbar_links">Nosotros</a>
-      <a href="contactos.html" class="navbar_links">Contactos</a>
+      <a href="#" class="navbar_links">Contactos</a>
     </div>
 
-  </nav>	
   </nav>
-</body>
-</html>
