--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <nav class="navbar">
     
-    <a href="/assets/img/bluemoonicon.png" class="navbar_logo"></a>
+    <a href="assets/img/bluemoonicon.png" class="navbar_logo"></a>
 
     <div class="navbar_bars">
       <i class="fa-sharp fa-solid fa-bars"></i>
@@ -22,10 +22,10 @@
 
     <div class="navbar_menu">
       <a href="#" class="navbar_links">Inicio</a>
-      <a href="/pages/productos.html" class="navbar_links">Productos</a>
-      <a href="/pages/ubicacion.html" class="navbar_links">Ubicacion</a>
-      <a href="/pages/nosotros.html" class="navbar_links">Nosotros</a>
-      <a href="/pages/contactos.html" class="navbar_links">Contactos</a>
+      <a href="pages/productos.html" class="navbar_links">Productos</a>
+      <a href="pages/ubicacion.html" class="navbar_links">Ubicacion</a>
+      <a href="pages/nosotros.html" class="navbar_links">Nosotros</a>
+      <a href="pages/contactos.html" class="navbar_links">Contactos</a>
     </div>
 
   </nav>
@@ -40,30 +40,42 @@
           <div class="text_container-left">
             <h1>Kuro Cannabis</h1>
             <h2>Ajustado de tu bolsillo</h2>
-            <p>Investiga nuestros <a href="">precios</a></p>
+            <p>Investiga nuestros <a href="pages/productos.html">precios</a></p>
             <button class="text_container-btn">
               <a href="#">Registrate</a>
             </button>
           </div>
           <div class="text_container-right">
-            <img src="/assets/img/Medicinal_Fried_Chicken.jpg" alt="local" class="imagen">
+            <img src="assets/img/Medicinal_Fried_Chicken.jpg" alt="local" class="imagen">
           </div>
         </div>
       </div>
     </header>
-    <main class="">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero molestias aut placeat eaque, eum voluptatibus maiores modi. Recusandae nihil debitis laborum voluptate incidunt saepe mollitia, quidem dolorum obcaecati laudantium ab?</p>
-      <p>lorem</p>
-      <p>lorem</p>
-      <p>lorem</p>
-      <p>lorem</p>
-      <p>lorem</p>
-    </main>
-    <aside>
+    <main class="info">
+			<h4>Como nos manejamos</h4>
+			<p>El primer metodo es venir directamente al local. Pueden ir a ubicacion haciendo click en <a href="./pages/ubicacion.html">"ubicacion".</a></p>
+			<p>Otro metodo es ponerse en contacto con nosotros via mail para reservar tu producto o consultas generales. Completando el formulario de la pagina de <a href="./pages/contactos.html">"contactos"</a> mandaremos un mail.</p>
+			<p>Tambien podes comprar directamente desde la web, yendo a <a href="./pages/productos.html">"productos".</a></p>
 
+      <p>Tenga en cuenta que todas las compras tienen que contar con una prescripcion medica que lo habilita a consumir marihuana.</p>
+      <p>O si usted el permiso Reprocann, su compra también es valida!</p>
+    </main>
+
+    <br><br>
+
+
+    <aside class="permiso">
+      <p>Esta pagina cuenta con un permiso especial para la venta del cannabis de manera legal y para personas con condiciones medicas.Si bien ya lo mencionamos en la parte superior</p>
+		  <p>es necesario que todas las personas que quieran comprar, tengan al dia el Reprocann.</p>
+		  <p>Haciendo click en <a href="https://www.argentina.gob.ar/salud/cannabis-medicinal/reprocann">"Reprocann"</a> sera direccionado a una pagina del gobierno para acceder al registro.</p>
     </aside>
 
-    <footer id="pie">
+    <footer class="pie">
+        <div class="redes">
+            <a href="https://es-la.facebook.com/"><img src="assets/img/redes/face-01.png" alt=""></a>
+            <a href="https://www.instagram.com/"><img src="assets/img/redes/insta-01.png" alt=""></a>
+            <a href="https://twitter.com/"><img src="assets/img/redes/twit-01.png" alt=""></a>
+        </div>
     </footer>
 
 
