--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -29,4 +29,44 @@
       <a href="#" class="navbar_links">Contactos</a>
     </div>
 
+
+	<main>
+		<form action="" class="formulario">
+			<h2>Contactanos</h2>
+			<label>
+				Nombre y Apellido
+				<input type="text" name="nomApell" required>
+			</label>
+			<label>
+				Email
+				<input type="email" name="email" required>
+			</label>
+			<label>
+				Telefono
+				<input type="tel" name="tel" required>
+			</label>
+			<label>
+				Asunto
+				<input type="text" name="asunto" required>
+			</label>
+			<label>
+				Mensaje
+				<textarea name="mensaje"></textarea>
+			</label>
+			<button type="submit">Enviar</button>
+			<br><br>
+		</form>
+	</main>
+	<aside></aside>
+
   </nav>
+
+  <footer>
+    <div class="redes">
+        <a href="https://es-la.facebook.com/"><img src="/assets/img/redes/face-01.png" alt=""></a>
+        <a href="https://www.instagram.com/"><img src="/assets/img/redes/insta-01.png" alt=""></a>
+        <a href="https://twitter.com/"><img src="/assets/img/redes/twit-01.png" alt=""></a>
+    </div>
+</footer>
+</body>
+</html>
