--- a/pages/productos.html
+++ b/pages/productos.html
@@ -33,12 +33,10 @@
 
 
 
-
-
     
 
     <header class="display">
-        <h1>Aqui te mostramos nuestros productos diponibles al dia de hoy.</h1>
+        <h1>Aqui te mostramos nuestros productos diponibles al dia de hoy, tambien puedes ir a la <a href="./productos.html#tabla">tabla de precios</a>.</h1>
         <h3>Recorda de tener al dia tu reprocann y de no perderte nuestros descuentos!!</h3>
     </header>
 
@@ -185,7 +183,7 @@
 
 
     <div>
-      <table class="table">
+      <table id="tabla">
           <thead>
               <tr>
                   <th scope="col">Tabla de Precios</th>
