--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -12,6 +12,11 @@
     <link rel="shortcut icon" href="/assets/img/bluemoonicon.png" type="image/x-icon">
 </head>
 <body>
+
+
+
+
+
   <nav class="navbar">
     
     <a href="/assets/img/bluemoonicon.png" class="navbar_logo"></a>
@@ -29,6 +34,21 @@
     </div>
 
   </nav>	
-  </nav>
+
+  <main>
+		<h1>¿Como encontrarnos?</h1>
+		<br>
+		<p>Nosotros nos encontramos en la esquina de malabia y loyola en el barrio de Villa Crespo.</p>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.317034806787!2d-58.43750898494796!3d-34.596143880461455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca743a603cab%3A0xc17626f1a63d191d!2sLoyola%20%26%20Malabia%2C%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1667384321544!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+	</main>
+	<aside></aside>
+	<footer>
+		<h2>Aqui puedes ver nuestras redes sociales!</h2>
+		<div class="redes">
+			<a href="https://es-la.facebook.com/"><img src="/assets/img/redes/face-01.png" alt=""></a>
+			<a href="https://www.instagram.com/"><img src="/assets/img/redes/insta-01.png" alt=""></a>
+			<a href="https://twitter.com/"><img src="/assets/img/redes/twit-01.png" alt=""></a>
+		</div>
+	</footer>
 </body>
 </html>
