--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -13,6 +13,9 @@
 	
 </head>
 <body>
+
+    
+
   <nav class="navbar">
     
     <a href="/assets/img/bluemoonicon.png" class="navbar_logo"></a>
@@ -30,3 +33,29 @@
     </div>
 
   </nav>
+
+
+<div class="card" style="width: 18rem;">
+    <div class="card-body">
+        <h2>¿Quienes somos?</h2>
+      <p class="card-text">Somos una pequeña tienda de comercio del cannabis de manera medicinal. En el cual nos interesa expandir y vender a diferentes farmacias y/o personas que se acerquen a querer interactuar con nosotros y enterarse sobre nuestros productos</p>
+      <p>Aqui abajo les dejo un video sobre la industria del cannabis en argentina, cuenta sobre la produccion, utilizacion,</p>
+    </div>
+</div>
+
+
+
+
+
+<aside class="video">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/WAymbcNctUE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</aside>
+<footer>
+    <div class="redes">
+        <a href="https://es-la.facebook.com/"><img src="/assets/img/redes/face-01.png" alt=""></a>
+        <a href="https://www.instagram.com/"><img src="/assets/img/redes/insta-01.png" alt=""></a>
+        <a href="https://twitter.com/"><img src="/assets/img/redes/twit-01.png" alt=""></a>
+    </div>
+</footer>
+</body>
+</html>
