--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
     </header>
     <main class="info">
 			<h4>Como nos manejamos</h4>
-			<p>El primer metodo es venir directamente al local. Pueden ir a ubicacion haciendo click en <a href="./pages/ubicacion.html">"ubicacion".</a></p>
-			<p>Otro metodo es ponerse en contacto con nosotros via mail para reservar tu producto o consultas generales. Completando el formulario de la pagina de <a href="./pages/contactos.html">"contactos"</a> mandaremos un mail.</p>
-			<p>Tambien podes comprar directamente desde la web, yendo a <a href="./pages/productos.html">"productos".</a></p>
+			<p>El primer metodo es venir directamente al local. Pueden ir a ubicacion haciendo click en <a href="pages/ubicacion.html">"ubicacion".</a></p>
+			<p>Otro metodo es ponerse en contacto con nosotros via mail para reservar tu producto o consultas generales. Completando el formulario de la pagina de <a href="pages/contactos.html">"contactos"</a> mandaremos un mail.</p>
+			<p>Tambien podes comprar directamente desde la web, yendo a <a href="pages/productos.html">"productos".</a></p>
 
       <p>Tenga en cuenta que todas las compras tienen que contar con una prescripcion medica que lo habilita a consumir marihuana.</p>
       <p>O si usted el permiso Reprocann, su compra también es valida!</p>
