Corregi el linkeo de los html menos el index con su css

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     <aside class="permiso">
       <p>Esta pagina cuenta con un permiso especial para la venta del cannabis de manera legal y para personas con condiciones medicas.Si bien ya lo mencionamos en la parte superior</p>
 		  <p>es necesario que todas las personas que quieran comprar, tengan al dia el Reprocann.</p>
+      <meta name="description" content="El rerocann es un permiso especial para la tenencia, portacion y plantacion de marihuana">
 		  <p>Haciendo click en <a href="https://www.argentina.gob.ar/salud/cannabis-medicinal/reprocann">"Reprocann"</a> sera direccionado a una pagina del gobierno para acceder al registro.</p>
     </aside>
 
