--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -8,7 +8,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="shortcut icon" href="/assets/img/bluemoonicon.png" type="image/x-icon">
 	
 </head>
@@ -35,27 +35,29 @@
   </nav>
 
 
-<div class="card" style="width: 18rem;">
-    <div class="card-body">
-        <h2>¿Quienes somos?</h2>
-      <p class="card-text">Somos una pequeña tienda de comercio del cannabis de manera medicinal. En el cual nos interesa expandir y vender a diferentes farmacias y/o personas que se acerquen a querer interactuar con nosotros y enterarse sobre nuestros productos</p>
-      <p>Aqui abajo les dejo un video sobre la industria del cannabis en argentina, cuenta sobre la produccion, utilizacion,</p>
-    </div>
-</div>
+  <div class="card" style="width: 18rem;">
+      <div class="card-body">
+          <h2>¿Quienes somos?</h2>
+        <p class="card-text">Somos una pequeña tienda de comercio del cannabis de manera medicinal. En el cual nos interesa expandir y vender a diferentes farmacias y/o personas que se acerquen a querer interactuar con nosotros y enterarse sobre nuestros productos</p>
+        <p>Aqui abajo les dejo un video sobre la industria del cannabis en argentina, cuenta sobre la produccion, utilizacion,</p>
+      </div>
+  </div>
 
 
 
 
 
-<aside class="video">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/WAymbcNctUE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</aside>
-<footer>
-    <div class="redes">
-        <a href="https://es-la.facebook.com/"><img src="/assets/img/redes/face-01.png" alt=""></a>
-        <a href="https://www.instagram.com/"><img src="/assets/img/redes/insta-01.png" alt=""></a>
-        <a href="https://twitter.com/"><img src="/assets/img/redes/twit-01.png" alt=""></a>
-    </div>
-</footer>
+  <aside class="video">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/WAymbcNctUE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </aside>
+
+
+  <footer>
+      <div class="redes">
+          <a href="https://es-la.facebook.com/"><img src="/assets/img/redes/face-01.png" alt=""></a>
+          <a href="https://www.instagram.com/"><img src="/assets/img/redes/insta-01.png" alt=""></a>
+          <a href="https://twitter.com/"><img src="/assets/img/redes/twit-01.png" alt=""></a>
+      </div>
+  </footer>
 </body>
 </html>
