corrigo links de navegacion de las paginas al index, sigue sin funcionar en github pages

--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="navbar_menu">
-      <a href="/index.html" class="navbar_links">Inicio</a>
+      <a href="../index.html" class="navbar_links">Inicio</a>
       <a href="productos.html" class="navbar_links">Productos</a>
       <a href="#" class="navbar_links">Ubicacion</a>
       <a href="nosotros.html" class="navbar_links">Nosotros</a>
