--- a/pages/productos.html
+++ b/pages/productos.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="navbar_menu">
-      <a href="/index.html" class="navbar_links">Inicio</a>
+      <a href="../index.html" class="navbar_links">Inicio</a>
       <a href="#" class="navbar_links">Productos</a>
       <a href="ubicacion.html" class="navbar_links">Ubicacion</a>
       <a href="nosotros.html" class="navbar_links">Nosotros</a>
