--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -45,9 +45,9 @@
 	<footer>
 		<h2>Aqui puedes ver nuestras redes sociales!</h2>
 		<div class="redes">
-			<a href="https://es-la.facebook.com/"><img src="/assets/img/redes/face-01.png" alt=""></a>
-			<a href="https://www.instagram.com/"><img src="/assets/img/redes/insta-01.png" alt=""></a>
-			<a href="https://twitter.com/"><img src="/assets/img/redes/twit-01.png" alt=""></a>
+			<a href="https://es-la.facebook.com/"><img src="../assets/img/redes/face-01.png" alt=""></a>
+			<a href="https://www.instagram.com/"><img src="../assets/img/redes/insta-01.png" alt=""></a>
+			<a href="https://twitter.com/"><img src="../assets/img/redes/twit-01.png" alt=""></a>
 		</div>
 	</footer>
 </body>
