--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/style.css">
-    <link rel="shortcut icon" href="/assets/img/bluemoonicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/img/bluemoonicon.png" type="image/x-icon">
 	
 </head>
 <body>
   <nav class="navbar">
     
-    <a href="/assets/img/bluemoonicon.png" class="navbar_logo"></a>
+    <a href="../assets/img/bluemoonicon.png" class="navbar_logo"></a>
 
     <div class="navbar_bars">
       <i class="fa-sharp fa-solid fa-bars"></i>
@@ -63,9 +63,9 @@
 
   <footer>
     <div class="redes">
-        <a href="https://es-la.facebook.com/"><img src="/assets/img/redes/face-01.png" alt=""></a>
-        <a href="https://www.instagram.com/"><img src="/assets/img/redes/insta-01.png" alt=""></a>
-        <a href="https://twitter.com/"><img src="/assets/img/redes/twit-01.png" alt=""></a>
+        <a href="https://es-la.facebook.com/"><img src="../assets/img/redes/face-01.png" alt=""></a>
+        <a href="https://www.instagram.com/"><img src="../assets/img/redes/insta-01.png" alt=""></a>
+        <a href="https://twitter.com/"><img src="../assets/img/redes/twit-01.png" alt=""></a>
     </div>
 </footer>
 </body>
